# fred-data

./: .env.template  LICENSE.txt  README.md  pyproject.toml
local_environment/: docker-compose.yml  local.env
local_environment/db_migrations/: .dockerignore  Dockerfile  flyway.config.toml
local_environment/db_migrations/sql/: V1.0.1__Add_pg_partman_schema.sql  V1.0.2__Add_pg_partman.sql
local_environment/postgres_with_extensions/: Dockerfile
notebooks/: exploration.ipynb  update_path.py
src/fred_data/api/: __init__.py  fred_api_client.py  pagination.py  pagination_tracker.py  responses.py  url_builders.py
src/fred_data/config/: __init__.py
src/fred_data/dates/: __init__.py
src/fred_data/observations/: __init__.py  per_series.py  transformations.py  types.py
src/fred_data/releases/: __init__.py  release_dates.py  releases.py
src/fred_data/series/: __init__.py  by_id.py  per_release.py  search.py  transformations.py  types.py
test/fred_data/api/: test_url_builders.py
tests/fred_data/api/: test_pagination.py
tests/fred_data/testing_utilities/: __init__.py  mock_http_response.py
