[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fred_data"
description = "A library for pulling and generating data based on public Federal Reserve Economic Data (FRED)"
requires-python = ">= 3.11.1"
dynamic = ["version"]
dependencies = [
    "hatchling~=1.27.0",
]

[project.optional-dependencies]
dev = [
]

[tool.hatch.version]
path = "src/fred_data/__about__.py"