[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fred_data"
description = "A library for pulling and generating data based on public Federal Reserve Economic Data (FRED)"
requires-python = ">= 3.11.1"
dynamic = ["version"]
dependencies = [
    "hatchling~=1.27.0",
    "python-dotenv~=1.0.1",
    "urllib3~=2.3.0"
]

[project.optional-dependencies]
dev = [
    "jupyter~=1.1.1",
    "pytest~=8.3.5"
]

[tool.hatch.version]
path = "src/fred_data/__about__.py"

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]